# Project3

./: JIC.txt  README.md  lib.rs  main.rs  testinglibs.rs
P3/: Cargo.toml  async lib.rs  c2VjcmV0X2ZpbGUudHh0.encr  secret_file.txt
P3/src/: lib.rs  main.rs  secret_file.txt
Project3/: Cargo.toml
