[package]
name = "P3"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
reqwest = {version = "0.12.4", features = ["json"]} 
serde_json = "1.0"
tokio = { version = "1", features = ["full"]}